# virtual-try-on-gemini-vision

./: .gitignore  README.md  lovable.md  virtual_try_on.ipynb
backend/: .dockerignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/routers/: mock.py  style.py  try_on.py
backend/services/: imagen.py  style.py
backend/utils/: image.py
frontend/: .env.example  index.html  next.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Footer.tsx  Header.tsx  ImageUpload.tsx  Layout.tsx  StylePanel.tsx  TryOnPanel.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: StyleSuggestions.tsx  TryOn.tsx
